<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical" >

    <TextView
        android:id="@+id/bugTitleLabel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="5dp"
        android:text="@string/title"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <EditText
        android:id="@+id/bugTitleDetailView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/bugTitleLabel"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="top"
        android:hint="@string/bug_title"
        android:inputType="text"
        android:textColor="@android:color/tertiary_text_dark"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/bugCreatedByLabel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/bugTitleLabel"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="14dp"
        android:text="@string/created_by"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <EditText
        android:id="@+id/bugCreatedBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bugTitleDetailView"
        android:layout_toRightOf="@id/bugCreatedByLabel"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/bug_created_by"
        android:inputType="text"
        android:textColor="@android:color/tertiary_text_dark"
        android:textSize="16sp"
        android:textStyle="normal"
        android:typeface="serif" />

    <TextView
        android:id="@+id/bugCreatedAtLabel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/bugCreatedByLabel"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="14dp"
        android:text="@string/created_at"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <EditText
        android:id="@+id/bugCreateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bugCreatedBy"
        android:layout_toRightOf="@id/bugCreatedAtLabel"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="top"
        android:hint="@string/created_at_no_colon"
        android:inputType="text"
        android:textColor="@android:color/tertiary_text_dark"
        android:textSize="16sp"
        android:textStyle="normal"
        android:typeface="serif" >
    </EditText>

    <HorizontalScrollView
        android:id="@+id/horizontalScroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bugCreateTime" >

        <LinearLayout
            android:id="@+id/bugAttachmentsProvideContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        </LinearLayout>
    </HorizontalScrollView>

    <EditText
        android:id="@+id/bugDescriptionDetailView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/horizontalScroll"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="top"
        android:hint="@string/bug_description"
        android:inputType="textMultiLine"
        android:minLines="2"
        android:textColor="@android:color/tertiary_text_dark"
        android:textSize="16sp"
        android:textStyle="normal"
        android:typeface="sans" />

    <RelativeLayout
        android:id="@+id/commentsContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#F7F7F7"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/commentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/comments" />

        <TextView
            android:id="@+id/commentCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="00"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>