<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fadingEdge="none"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/projectNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/name_hint_text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <EditText
            android:id="@+id/projectDescriptionField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/projectNameField"
            android:layout_marginTop="5dp"
            android:gravity="top"
            android:hint="@string/description_hint_text"
            android:lines="3"
            android:textSize="18sp"
            android:typeface="serif" />

        <EditText
            android:id="@+id/projProjectField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/projectDescriptionField"
            android:layout_marginTop="5dp"
            android:gravity="top"
            android:hint="@string/project_name_hint_text"
            android:typeface="serif"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/projectModeratorsParent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/projProjectField"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#EDEFF1" >

            <TextView
                android:id="@+id/projectModeratorsLabel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="6dp"
                android:text="@string/proj_moderators_label"
                android:textColor="#252525"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/addProjectModeratorsButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_toRightOf="@id/projectModeratorsLabel"
                android:padding="0dp"
                android:text="+"
                android:textSize="30sp" />

            <com.raweng.projectsonthego.Utilities.FlowLayout
                android:id="@+id/projectModeratorsContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/addProjectModeratorsButton"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:orientation="vertical" >
            </com.raweng.projectsonthego.Utilities.FlowLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/projectMembersParent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/projectModeratorsParent"
            android:background="#EDEFF1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp" >

            <TextView
                android:id="@+id/projectMembersLabel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="6dp"
                android:text="@string/proj_members_label"
                android:textColor="#252525"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/addProjectMembersButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_toRightOf="@id/projectMembersLabel"
                android:padding="0dp"
                android:text="+"
                android:textSize="30sp" />

            <com.raweng.projectsonthego.Utilities.FlowLayout
                android:id="@+id/projectMembersContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/addProjectMembersButton"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:orientation="vertical" >
            </com.raweng.projectsonthego.Utilities.FlowLayout>
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>